Amended the swagger.yaml file to include a new endpoint /reset. Amended the object store implementations and abstract class to add a method for resetting the VTN while it is running.  This is intended purely for testing purposes and aid with the test harness for the GBCS for DESNZ interoperability.
