# swagger_server/controllers/reset_controller.py
@@ -1,0 +1,18 @@
+# Added to autogenerated stub
+import logging
+from http import HTTPStatus
+
+from swagger_server.objStore.storageInterface import objStore
+
+
+def reset_vtn():
+    """Reset the VTN
+
+    This is a custom addition to reset the VTN for GBCS
+
+    :rtype: bool
+    """
+    logging.info(f"reset_vtn()")
+    objStore.reset()
+
+    return HTTPStatus.OK
